<resources>
    <string name="app_name">All_In_One</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo_from_gallery_or_camera">Take photo from gallery or camera</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    //biometric
    <string name="username_hint">phone number, email, or username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="already_signedin">You are now done with login. Move to your real MainActivity</string>
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="already_have_an_account_login">Already have an account.?</string>
    <string name="confirm_password">Confirm passward</string>
    <string name="email">Email</string>
    <string name="SignUp">SignUp</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account.?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //widget
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="last_updated">Last Updated</string>
    <string name="_1_d_2_s">%1$d @%2$s</string>
    <string name="update_now">Update now</string>

</resources>