<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppWidgetSample.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppWidgetSample.AppWidgetContainer">
    <LinearLayout
        android:id="@+id/section_id"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/appwidget_id_label"
            style="@style/AppWidgetLabel"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="Widget ID"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/appwidget_id"
            style="@style/AppWidgetText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="XX"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/section_update"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_below="@id/section_id">
        <TextView
            android:id="@+id/appwidget_update_label"
            style="@style/AppWidgetLabel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="2dp"
            android:text="@string/last_updated"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/appwidget_update"
            style="@style/AppWidgetText"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="2dp"
            android:text="@string/_1_d_2_s"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_update"
        android:padding="10dp"
        android:text="@string/update_now"
        style="@style/AppWidgetButton"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>