<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ourApiPost.Ui.ForPostActivity">
    <include
        android:id="@+id/customToolbar"
        layout="@layout/custom_toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customToolbar">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_img"
            android:layout_width="102dp"
            android:layout_height="103dp"
            android:src="@drawable/user_empty_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/edit_profile_btn"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_edit_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ProgressBar
            android:id="@+id/image_loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@id/rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="14sp"
            android:padding="15dp"
            android:hint="@string/name"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/edit_profile_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="14sp"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:lines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/address"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/edit_save_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            tools:layout_editor_absoluteX="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>